lib/tests/fixtures/compiler/evaluation/alias_conflict_defined_type.pp
define foo {
}

type Foo = Integer
